--- a/OneDo/View/FolderListControl.xaml
+++ b/OneDo/View/FolderListControl.xaml
@@ -10,6 +10,7 @@
                        xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
                        xmlns:v="using:OneDo.View"
                        xmlns:vm="using:OneDo.ViewModel"
+                       DataContext="{Binding FolderList, Source={StaticResource Locator}}"
                        mc:Ignorable="d">
 
     <UserControl.Resources>
