--- a/OneDo/View/NoteListControl.xaml
+++ b/OneDo/View/NoteListControl.xaml
@@ -11,6 +11,7 @@
                        xmlns:v="using:OneDo.View"
                        xmlns:vm="using:OneDo.ViewModel"
                        x:Name="Root"
+                       DataContext="{Binding NoteList, Source={StaticResource Locator}}"
                        mc:Ignorable="d">
 
     <UserControl.Resources>
