--- a/OneDo/View/ConfirmationView.xaml
+++ b/OneDo/View/ConfirmationView.xaml
@@ -1,4 +1,4 @@
-﻿<v:ModalBase x:Class="OneDo.View.ConfirmationView"
+﻿<v:ModalView x:Class="OneDo.View.ConfirmationView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -13,4 +13,4 @@
             <Button Content="{x:Bind VM.ButtonText, Mode=OneWay}" Command="{x:Bind VM.ConfirmCommand}" />
         </StackPanel>
     </Grid>
-</v:ModalBase>
+</v:ModalView>
