--- a/OneDo/View/DebugView.xaml
+++ b/OneDo/View/DebugView.xaml
@@ -1,9 +1,10 @@
-﻿<v:ModalBase x:Class="OneDo.View.DebugView"
+﻿<v:ModalView x:Class="OneDo.View.DebugView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:v="using:OneDo.View"
+             DataContext="{Binding Debug, Source={StaticResource Locator}}"
              mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -49,4 +50,4 @@
         </CommandBar>
     </Grid>
 
-</v:ModalBase>
+</v:ModalView>
