--- a/OneDo/View/FolderEditor.xaml
+++ b/OneDo/View/FolderEditor.xaml
@@ -1,4 +1,4 @@
-﻿<v:ModalBase x:Class="OneDo.View.FolderEditor"
+﻿<v:ModalView x:Class="OneDo.View.FolderEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,11 +6,12 @@
              xmlns:behaviors="using:OneDo.View.Behaviors"
              xmlns:v="using:OneDo.View"
              xmlns:vm="using:OneDo.ViewModel"
+             xmlns:vmItems="using:OneDo.ViewModel.Items"
              d:DesignWidth="264"
              DataContext="{Binding FolderEditor, Source={StaticResource Locator}}"
              mc:Ignorable="d">
 
-    <v:ModalBase.Resources>
+    <v:ModalView.Resources>
 
         <Style x:Key="ColorItemContainerStyle" TargetType="GridViewItem">
             <Setter Property="BorderThickness" Value="0" />
@@ -53,11 +54,11 @@
             </Setter>
         </Style>
 
-        <DataTemplate x:Key="ColorItemTemplate" x:DataType="vm:ColorItemObject">
+        <DataTemplate x:Key="ColorItemTemplate" x:DataType="vmItems:ColorItemObject">
             <Border Background="{x:Bind Color, Converter={StaticResource ColorToBrushConverter}}" />
         </DataTemplate>
 
-    </v:ModalBase.Resources>
+    </v:ModalView.Resources>
 
     <Border Width="266"
             HorizontalAlignment="Center"
@@ -112,4 +113,4 @@
         </Grid>
     </Border>
 
-</v:ModalBase>
+</v:ModalView>
