--- a/OneDo/View/NoteEditor.xaml
+++ b/OneDo/View/NoteEditor.xaml
@@ -1,4 +1,4 @@
-﻿<v:ModalBase x:Class="OneDo.View.NoteEditor"
+﻿<v:ModalView x:Class="OneDo.View.NoteEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,13 +11,14 @@
              xmlns:im="using:Microsoft.Xaml.Interactions.Media"
              xmlns:v="using:OneDo.View"
              xmlns:vm="using:OneDo.ViewModel"
+             xmlns:vmItems="using:OneDo.ViewModel.Items"
              x:Name="Root"
              d:DesignHeight="640"
              d:DesignWidth="360"
              DataContext="{Binding NoteEditor, Source={StaticResource Locator}}"
              mc:Ignorable="d">
 
-    <v:ModalBase.Resources>
+    <v:ModalView.Resources>
 
         <converters:ConditionConverter x:Key="TitleBackgroundConverter">
             <converters:ConditionConverter.If>
@@ -516,7 +517,7 @@
             </Setter>
         </Style>
 
-    </v:ModalBase.Resources>
+    </v:ModalView.Resources>
 
     <Grid x:Name="RootGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
@@ -557,7 +558,7 @@
                           ItemsSource="{x:Bind VM.Folders, Mode=OneWay}"
                           SelectedItem="{x:Bind VM.SelectedFolder, Mode=TwoWay, Converter={StaticResource ChangeTypeConverter}}">
                     <ComboBox.ItemTemplate>
-                        <DataTemplate x:DataType="vm:FolderItemViewModel">
+                        <DataTemplate x:DataType="vmItems:FolderItemViewModel">
                             <TextBlock Foreground="{x:Bind Color, Mode=OneWay, Converter={StaticResource ColorToBrushConverter}}" Text="{x:Bind Name, Mode=OneWay}" />
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
@@ -658,36 +659,6 @@
             </CommandBar.PrimaryCommands>
         </CommandBar>
 
-        <!--<v:ModalContainer x:Name="ModalContainer"
-                          Grid.RowSpan="2"
-                          CloseCommand="{Binding CloseCommand}"
-                          Modal="{Binding Current}">
-            <v:ModalContainer.TemplateSelector>
-                <v:ModalTemplateSelector>
-                    <v:ModalTemplateSelector.DatePickerTemplate>
-                        <DataTemplate x:DataType="vm:DatePickerViewModel">
-                            <Border HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
-                                    BorderThickness="1">
-                                <v:DatePicker />
-                            </Border>
-                        </DataTemplate>
-                    </v:ModalTemplateSelector.DatePickerTemplate>
-                    <v:ModalTemplateSelector.TimePickerTemplate>
-                        <DataTemplate x:DataType="vm:TimePickerViewModel">
-                            <Border HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    BorderBrush="{ThemeResource SystemControlForegroundBaseLowBrush}"
-                                    BorderThickness="1">
-                                <v:TimePicker />
-                            </Border>
-                        </DataTemplate>
-                    </v:ModalTemplateSelector.TimePickerTemplate>
-                </v:ModalTemplateSelector>
-            </v:ModalContainer.TemplateSelector>
-        </v:ModalContainer>
--->
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="WindowStates">
                 <VisualState x:Name="WideState">
@@ -714,4 +685,4 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
     </Grid>
-</v:ModalBase>
+</v:ModalView>
