--- a/OneDo/View/SettingsView.xaml
+++ b/OneDo/View/SettingsView.xaml
@@ -1,9 +1,11 @@
-﻿<v:ModalBase x:Class="OneDo.View.SettingsView"
+﻿<v:ModalView x:Class="OneDo.View.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:v="using:OneDo.View" x:Name="Root"
+             xmlns:v="using:OneDo.View"
+             x:Name="Root"
+             DataContext="{Binding Settings, Source={StaticResource Locator}}"
              mc:Ignorable="d">
 
     <Grid x:Name="RootGrid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -32,4 +34,4 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
     </Grid>
-</v:ModalBase>
+</v:ModalView>
