--- a/OneDo/View/DatePicker.xaml
+++ b/OneDo/View/DatePicker.xaml
@@ -1,12 +1,12 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.DatePicker"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:v="using:OneDo.View"
-                       mc:Ignorable="d">
+﻿<v:ModalView x:Class="OneDo.View.DatePicker"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:v="using:OneDo.View"
+             mc:Ignorable="d">
 
-    <v:ExtendedUserControl.Resources>
+    <v:ModalView.Resources>
 
         <Style x:Key="CalendarViewDayItemStyle" TargetType="CalendarViewDayItem">
             <Setter Property="Margin" Value="0" />
@@ -98,7 +98,7 @@
             </Setter>
         </Style>
 
-    </v:ExtendedUserControl.Resources>
+    </v:ModalView.Resources>
 
     <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}">
         <Grid.ColumnDefinitions>
@@ -114,33 +114,34 @@
         <CalendarView x:Name="CalendarView"
                       Grid.Row="0"
                       Grid.ColumnSpan="2"
+                      HorizontalAlignment="Stretch"
                       Style="{StaticResource CalendarViewStyle}"
-                      SelectedDatesChanged="CalendarView_SelectedDatesChanged" HorizontalAlignment="Stretch" />
+                      SelectedDatesChanged="CalendarView_SelectedDatesChanged" />
 
         <Button Grid.Row="1"
                 Grid.Column="0"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,1,0"
-                Command="{x:Bind VM.TodayCommand}"
+                Click="{x:Bind SetToday}"
                 Content="Today" />
         <Button Grid.Row="1"
                 Grid.Column="1"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,0,0"
-                Command="{x:Bind VM.TomorrowCommand}"
+                Click="{x:Bind SetTomorrow}"
                 Content="Tomorrow" />
         <Button Grid.Row="2"
                 Grid.Column="0"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,1,0"
-                Command="{x:Bind VM.ThisWeekCommand}"
+                Click="{x:Bind SetEndOfWeek}"
                 Content="This week" />
         <Button Grid.Row="2"
                 Grid.Column="1"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,0,0"
-                Command="{x:Bind VM.NextWeekCommand}"
+                Click="{x:Bind SetEndOfNextWeek}"
                 Content="Next week" />
 
     </Grid>
-</v:ExtendedUserControl>
+</v:ModalView>
