--- a/OneDo/View/NoteEditor.xaml
+++ b/OneDo/View/NoteEditor.xaml
@@ -594,14 +594,14 @@
                         </Grid.ColumnDefinitions>
                         <Button x:Name="ReminderButton"
                                 Style="{StaticResource PickerButtonStyle}"
-                                Foreground="{x:Bind VM.ReminderPicker.Time, Mode=OneWay, Converter={StaticResource PickerForegroundConverter}}"
-                                Content="{x:Bind VM.ReminderPicker.TimeText, Mode=OneWay}"
+                                Foreground="{x:Bind VM.Reminder, Mode=OneWay, Converter={StaticResource PickerForegroundConverter}}"
+                                Content="{x:Bind VM.ReminderText, Mode=OneWay}"
                                 Tag="&#xEA8F;"
                                 Tapped="ReminderButton_Tapped" />
                         <Button Grid.Column="1"
                                 Style="{StaticResource ClearPickerButtonStyle}"
-                                Command="{x:Bind VM.ReminderPicker.ClearCommand, Mode=OneWay}"
-                                Visibility="{x:Bind VM.ReminderPicker.Time, Mode=OneWay, Converter={StaticResource NotNullToVisibilityConverter}}" />
+                                Command="{x:Bind VM.ClearReminderCommand, Mode=OneWay}"
+                                Visibility="{x:Bind VM.Reminder, Mode=OneWay, Converter={StaticResource NotNullToVisibilityConverter}}" />
                     </Grid>
                 </StackPanel>
                 <Rectangle Margin="48,0,0,0" Style="{StaticResource HorizontalLineStyle}" />
@@ -651,7 +651,7 @@
             </CommandBar.PrimaryCommands>
         </CommandBar>
 
-        <v:ModalContainer x:Name="ModalContainer" Grid.RowSpan="2" Margin="0,49,0,0" />
+        <v:ModalContainer x:Name="ModalContainer" Grid.RowSpan="2" />
 
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="WindowStates">
