--- a/OneDo/View/TimePicker.xaml
+++ b/OneDo/View/TimePicker.xaml
@@ -1,13 +1,13 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.TimePicker"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:controls="using:OneDo.View.Controls"
-                       xmlns:v="using:OneDo.View"
-                       mc:Ignorable="d">
+﻿<v:ModalView x:Class="OneDo.View.TimePicker"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:controls="using:OneDo.View.Controls"
+             xmlns:v="using:OneDo.View"
+             mc:Ignorable="d">
 
-    <v:ExtendedUserControl.Resources>
+    <v:ModalView.Resources>
 
         <Style x:Key="QuickButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent" />
@@ -70,13 +70,9 @@
             <Setter Property="HorizontalAlignment" Value="Center" />
         </Style>
 
-    </v:ExtendedUserControl.Resources>
+    </v:ModalView.Resources>
 
-    <Grid Width="240"
-          Height="360"
-          Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
-          BorderBrush="{ThemeResource SystemControlForegroundChromeHighBrush}"
-          BorderThickness="1">
+    <Grid Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -135,29 +131,22 @@
                 Grid.Column="0"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,1,0"
-                Command="{x:Bind VM.InOneMinuteCommand}"
+                Click="{x:Bind SetInOneMinute}"
                 Content="In 1 minute" />
         <Button Grid.Row="2"
                 Grid.Column="1"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,0,0"
-                Command="{x:Bind VM.InFiveMinuteCommand}"
+                Click="{x:Bind SetInFiveMinutes}"
                 Content="In 5 minutes" />
 
         <Button Grid.Row="3"
-                Grid.Column="0"
+                Grid.ColumnSpan="2"
                 Style="{StaticResource QuickButtonStyle}"
                 BorderThickness="0,1,1,0"
                 Tapped="{x:Bind UpdateTime}">
             <FontIcon FontSize="16" Glyph="&#xE8FB;" />
         </Button>
-        <Button Grid.Row="3"
-                Grid.Column="1"
-                Style="{StaticResource QuickButtonStyle}"
-                BorderThickness="0,1,0,0"
-                Command="{x:Bind VM.ClearCommand}">
-            <FontIcon FontSize="16" Glyph="&#xE894;" />
-        </Button>
     </Grid>
 
-</v:ExtendedUserControl>
+</v:ModalView>
