--- a/OneDo/View/FolderListControl.xaml
+++ b/OneDo/View/FolderListControl.xaml
@@ -325,7 +325,7 @@
             </Setter>
         </Style>
 
-        <DataTemplate x:Key="FolderItemTemplate" x:DataType="vmItems:FolderItemViewModel">
+        <DataTemplate x:Key="FolderItemTemplate" x:DataType="vm:FolderItemViewModel">
             <Border Background="Transparent" BorderThickness="0">
                 <FlyoutBase.AttachedFlyout>
                     <MenuFlyout>
