--- a/OneDo/View/LogView.xaml
+++ b/OneDo/View/LogView.xaml
@@ -1,10 +1,10 @@
-﻿<v:ModalView x:Class="OneDo.View.DebugView"
+﻿<v:ModalView x:Class="OneDo.View.LogView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:v="using:OneDo.View"
-             DataContext="{Binding Debug, Source={StaticResource Locator}}"
+             DataContext="{Binding Log, Source={StaticResource Locator}}"
              mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -15,7 +15,7 @@
         <ListView x:Name="Log"
                   Padding="6"
                   FontSize="12"
-                  ItemsSource="{x:Bind VM.Log, Mode=OneWay}"
+                  ItemsSource="{x:Bind VM.Items, Mode=OneWay}"
                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
                   ScrollViewer.HorizontalScrollMode="Enabled"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
@@ -32,17 +32,17 @@
             </ListView.Resources>
         </ListView>
         <CommandBar x:Name="MainCommandBar" Grid.Row="2">
-            <AppBarButton Command="{x:Bind VM.LoadLogCommand}" Label="Reload">
+            <AppBarButton Command="{x:Bind VM.LoadCommand}" Label="Reload">
                 <AppBarButton.Icon>
                     <FontIcon Glyph="&#xE149;" />
                 </AppBarButton.Icon>
             </AppBarButton>
-            <AppBarButton Command="{x:Bind VM.ExportLogCommand}" Label="Export">
+            <AppBarButton Command="{x:Bind VM.ExportCommand}" Label="Export">
                 <AppBarButton.Icon>
                     <FontIcon Glyph="&#xE896;" />
                 </AppBarButton.Icon>
             </AppBarButton>
-            <AppBarButton Command="{x:Bind VM.ClearLogCommand}" Label="Clear">
+            <AppBarButton Command="{x:Bind VM.ClearCommand}" Label="Clear">
                 <AppBarButton.Icon>
                     <FontIcon Glyph="&#xEA99;" />
                 </AppBarButton.Icon>
